<resources>
    <string name="app_name">Helmet_Application</string>

    <string name="introSlider1_text">
        This application is the personal designed portfolio.
        This application have been designed to showcase my personal details or short bio data.
    </string>
    <string name="next_button">Next</string>
    <string name="introSlider2_text">
         It also contains skills screen where I have mentioned my skills
        I have obtained in my school days as well as hobbies screen where you can find my personal interests
    </string>
    <string name="introSlider3_text">
        Finally, it contains contact screen where you can input your details and ask me any questions
        as well as can give any suggestions to improve my portfolio.
    </string>
    <string name="sliderNumber1">1 / 3</string>
    <string name="sliderNumber2">2 / 3</string>
    <string name="sliderNumber3">3 / 3</string>

    <string name="login">Login</string>
    <string name="signup_redirect">Not yet registered? Sign Up</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="fullName">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="btnSubmit">Submit</string>
    <string name="contactDesc">Description</string>
    <string name="contact_subheading">Get In Touch</string>
    <string name="home_heading">Protect Your Passion</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="for_you">For You</string>
    <string name="dob_heading">DOB:</string>
    <string name="age_heading">Age:</string>
    <string name="address_heading">Address:</string>


    <string name="aboutUsHeading">About Us</string>
    <string name="aboutUs"> Welcome to TopGuard Helmets, the premier source for top-tier head protection.
        We take pride in offering a diverse selection of helmets that correspond to our customers\'
        specific needs and preferences.
        We have you covered with everything from stylish motorcycle helmets to sturdy bicycle helmets.
        Our dedication to safety is unwavering; every helmet in our inventory undergoes extensive testing
        to ensure that it meets or exceeds the most stringent safety requirements.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>