<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_page"
    tools:context=".view.viewholder.Signup_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/ll_Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/white_bg_rectangle">

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue_purple"
                android:fontFamily="@font/nunito_sans_bold"/>

            <EditText
                android:id="@+id/et_signupUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_sans_regular"/>

            <EditText
                android:id="@+id/et_FullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawablePadding="8dp"
                android:hint="@string/fullName"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_sans_regular"/>

            <EditText
                android:id="@+id/et_signupEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textSize="15sp"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_sans_regular"/>

            <EditText
                android:id="@+id/et_signupPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textSize="15sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_sans_regular"/>

            <Button
                android:id="@+id/btn_Signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue_purple"
                app:cornerRadius = "20dp"
                android:fontFamily="@font/nunito_sans_bold"/>

            <TextView
                android:id="@+id/tvSignupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_redirect"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_purple"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans_regular"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>