<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    tools:context=".view.viewholder.Login_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="36sp"
        android:textColor="@color/blue_purple"
        android:fontFamily="@font/nunito_sans_bold"/>

    <ImageView
        android:id="@id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/splash_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_loginUsername"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/input_bg"
            android:padding="8dp"
            android:textSize="15sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:hint="@string/username"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/input_bg"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@color/black"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_sans_bold"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue_purple"
            app:cornerRadius = "20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupRedirectText"
            android:text="@string/signup_redirect"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="15sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginTop="8dp"
            android:textColor="@color/blue_purple"/>
    </LinearLayout>
</LinearLayout>