<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topNavProfile"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMyPicture"
                android:layout_width="180dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_profile_foreground" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_regular"

                android:textAlignment="center"
                android:textSize="15sp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/green"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <LinearLayout
            android:id="@+id/llDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDOB"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                 />

            <TextView
                android:id="@+id/tvDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/dob_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/nunito_sans_bold"

                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAge"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                 /> <!-- Added gravity attribute -->

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/age_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMyAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:fontFamily="@font/nunito_sans_bold"

                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                 /> <!-- Added gravity attribute -->

            <TextView
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/address_heading"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvMyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nunito_sans_bold"

                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivWork"
                android:layout_width="36dp"
                android:layout_height="41dp"
                android:layout_marginStart="25dp"
                 />

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_sans_bold"

                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/MyWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:fontFamily="@font/nunito_sans_bold"

                android:textAlignment="center"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>