<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_heading"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/login_page"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_arrivals"
                        android:textSize="20sp"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="12dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="130dp"
                                android:layout_height="180dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp"
                                android:backgroundTint="@color/grey">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop"
                                        android:src="@drawable/login_page"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Nike Air Max 2090"
                                        android:textColor="@color/black"
                                        android:textSize="13sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="₹150"
                                        android:textColor="@color/black"
                                        android:textSize="20sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="130dp"
                                android:layout_height="180dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp"
                                android:backgroundTint="@color/grey">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Nike Air Max 2090"
                                        android:textColor="@color/black"
                                        android:textSize="15sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="₹150"
                                        android:textColor="@color/black"
                                        android:textSize="20sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="130dp"
                                android:layout_height="180dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp"
                                android:backgroundTint="@color/grey">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="10dp">


                                    <ImageView
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop"
                                        />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Nike Air Max 2090"
                                        android:textColor="@color/black"
                                        android:textSize="15sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="₹150"
                                        android:textColor="@color/black"
                                        android:textSize="20sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="130dp"
                                android:layout_height="180dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp"
                                android:backgroundTint="@color/grey">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="10dp">


                                    <ImageView
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Nike Air Max 2090"
                                        android:textColor="@color/black"
                                        android:textSize="15sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="₹150"
                                        android:textColor="@color/black"
                                        android:textSize="20sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_you"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivHome2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/login_page"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>